Color Space Selector: fix HiDPI scaling

BUG: 456929